examples/test/testpolicy16053.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16053
  namespace: namespace316
spec:
  podSelector:
    matchLabels:
      key19: value48
      key43: value6
      key37: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value25
          key38: value29
          key44: value14
      podSelector:
        matchLabels:
          key46: value44
          key48: value32
          key20: value25
